--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="../dist/output.css" rel="stylesheet" />
+    <link href="css/output.css" rel="stylesheet" />
     <title>Document</title>
   </head>
   <body class="bg-[#060d23]">
     <nav
-      class="fixed top-0 z-50 w-full bg-[#0b1739] dark:bg-gray-800 dark:border-gray-700"
+      class="fixed top-0 z-50 w-full bg-[#0b1739] dark:bg-gray-800 dark:border-gray-700" id="barra-de-navegacion"
     >
       <div class="px-3 py-3 lg:px-5 lg:pl-3">
         <div class="flex items-center justify-between">
@@ -37,7 +37,7 @@
             </button>
             <a href="https://flowbite.com" class="flex ms-2 md:me-24">
               <img
-                src="../static/Img/file.png"
+                src="assets/Img/file.png"
                 class="h-[50px] me-3"
                 alt="Biblioteca Virtual"
               />
@@ -169,6 +169,7 @@
              
             </a>
           </li>
+          
           <li>
             <a
               href="#"
@@ -285,7 +286,7 @@
       </div>
     </aside>
 
-    <div class="p-4 sm:ml-64">
+    <div class="p-4 sm:ml-64" id="section">
       <div
         class="p-4 border-2 border-gray-200 border-dashed rounded-lg dark:border-gray-700 mt-14"
       >
@@ -571,6 +572,6 @@
       </div>
     </div>
 
-    <script src="../static/js/index.js"></script>
+    <script src="assets/js/flowbite.js" id="scripts"></script>
   </body>
 </html>
