--- a/src/index.html
+++ b/src/index.html
@@ -286,7 +286,7 @@
       </div>
     </aside>
 
-    <div class="p-4 sm:ml-64" id="section">
+    <section class="p-4 sm:ml-64" id="section">
       <div
         class="p-4 border-2 border-gray-200 border-dashed rounded-lg dark:border-gray-700 mt-14"
       >
@@ -570,7 +570,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </section>
 
     <script src="assets/js/flowbite.js" id="scripts"></script>
   </body>
